<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/layout_margin"
    android:paddingTop="@dimen/small_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_Text" />

    <EditText
        android:id="@+id/nickname_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/what_is_your_nickname"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/what_is_your_nickname"
        android:visibility="visible" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/done"
        android:onClick="onClickListener" />

    <TextView
        android:id="@+id/nickname_edit"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone"
        android:text="" />

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/yellow_star"
        android:cropToPadding="true"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/bio_scroll"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--android:layout_gravity="center_horizontal" has to be added for older devices/APIs for text to show correctly, but nothing > API 28. It's a compatibility issue that should not have been excluded from androidx stuff -->
        <TextView
            android:id="@+id/bio_text"
            android:layout_gravity="center_horizontal"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:paddingLeft="@dimen/layout_margin"
            android:paddingTop="@dimen/small_padding"
            android:paddingRight="@dimen/layout_margin"
            android:text="@string/bio_text"
            tools:text="@string/bio" />
    </ScrollView>
</LinearLayout>